# taxcom_python_test

./: .env  README.md  create_table.sql  docker-compose.yml  main.py  pyproject.toml  python_task.md
io_files/: combined_table.json
